# python-oxmsg

./: .gitignore  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
attachment/: index.html
docs/: attachment.md  index.md  message.md  properties.md  recipient.md
message/: index.html
properties/: index.html
recipient/: index.html
src/oxmsg/: __init__.py  properties.py
src/oxmsg/domain/: constants.json  constants.py  reference.py
tests/: test_attachment.py  test_message.py  test_properties.py  test_recipient.py  test_storage.py  unit_util.py
typings/olefile/: __init__.pyi  olefile.pyi
